Adds branching feature
